k8s/dependencies/7-contour/templates/gateway-internal.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour-internal
spec:
  controllerName: projectcontour.io/gateway-controller
  parametersRef:
    kind: ContourDeployment
    group: projectcontour.io
    name: contour-internal-params
    namespace: projectcontour
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gateway-internal
  namespace: projectcontour
spec:
  gatewayClassName: contour-internal
  listeners:
    - name: grpc
      protocol: HTTP
      port: 9000
      allowedRoutes:
        namespaces:
          from: All
